# qobuz-api-rust

./: .gitignore  Cargo.toml  README.md  crate_plan.md  migration_plan.md  rustfmt.toml
metadata_test/: flac_metadata_report.md  mp3_metadata_report.md
metadata_test/docs/: README.md  analysis.md  metadata_test_plan.md
metadata_test/reports/: Adele_Hello_FLAC_28014963_vs_Adele - Hello.txt  Adele_Hello_MP3_28014963_vs_Adele - Hello.txt  Daft Punk_Around the World_FLAC_1065482_vs_Daft Punk - Around the World.txt  Daft Punk_Around the World_MP3_1065482_vs_Daft Punk - Around the World.txt  Glenn Gould_Aria _ Sarabande (Remastered)_FLAC_26890072_vs_Glenn Gould - Aria _ Sarabande (Remastered).txt  Glenn Gould_Aria _ Sarabande (Remastered)_MP3_26890072_vs_Glenn Gould - Aria _ Sarabande (Remastered).txt  Herbie Hancock_Chameleon_FLAC_37905_vs_Herbie Hancock - Chameleon (Album Version).txt  Herbie Hancock_Chameleon_MP3_37905_vs_Herbie Hancock - Chameleon (Album Version).txt  Kendrick Lamar_BLOOD._FLAC_40128300_vs_Kendrick Lamar - BLOOD.txt  Kendrick Lamar_BLOOD._MP3_40128300_vs_Kendrick Lamar - BLOOD.txt  Madonna_Like a Virgin_FLAC_6004880_vs_Madonna - Like a Virgin.txt  Madonna_Like a Virgin_MP3_6004880_vs_Madonna - Like a Virgin.txt  Miles Davis_So What_FLAC_13176083_vs_Miles Davis - So What.txt  Miles Davis_So What_MP3_13176083_vs_Miles Davis - So What.txt  Nirvana_Smells Like Teen Spirit_FLAC_14158543_vs_Nirvana - Smells Like Teen Spirit (Album Version).txt  (+3 more)
src/: api.rs  errors.rs  lib.rs  main.rs  metadata.rs  models.rs  utils.rs
src/api/: auth.rs  content.rs  (+3 more)
(+76 files in other folders)
